5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1712_2505.log
== TEST (2019-05-13 22:19:05) 
-- CODE:
from math import factorial*
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)

-- ERROR:
File "XXXX", line 1
    from math import factorial*
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:19:19) 
-- CODE:
from math import*
factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)

-- OUTPUT:
0.9303519698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:19:43) 
-- CODE:
from math import*
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)

-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:32:18) 
-- CODE:
from math import*
factorial
x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1
while w - pi <= x and pi >= x:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(x)

-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:36:00) 
-- CODE:
from math import*

x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
while w - pi <= x and pi >= x:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(factorial x)

-- ERROR:
File "XXXX", line 8
    m = 1from math import*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:36:16) 
-- CODE:
from math import*

x = radians(eval(input("")))
k = int(input(""))

w = 1
n = 1
m = 1 
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)from math import*
x = int(input(""))
cont = 1
p  = 0
n = 1
m = -1
while cont < x:
	m = m*(-1)
	p = p + (1/((n + 1)*(n + 2)*(n + 3)))*4*m
	n = n + 2
	cont = cont + 1
p = (round(p, 8))
pi = 3.0 + p
print(pi)
while w - pi <= x and pi >= x:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(factorial x)

-- ERROR:
File "XXXX", line 21
    print(pi)from math import*
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:22:12) 
-- CODE:
from math import*
from math import factorial
x = radianseval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(round(x, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = radianseval(input(""))
NameError: name 'radianseval' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:22:24) 
-- CODE:
from math import*
from math import factorial
x = radians(eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(round(x, 10))
-- ERROR:
File "XXXX", line 4
    k = int(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:22:38) 
-- CODE:
from math import*
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(round(x, 10))
-- OUTPUT:
0.9303519698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 20:22:55) 
-- CODE:
from math import factorial
x = eval(input(""))
k = int(input(""))

w = 1
n = 1
m = 1
while w < k:
    n = n + 2
    m = m*(-1)
    x = x + ((x**n)/(factorial(n)))*(m)
    w = w + 1
x = round(x , 10)
print(round(x, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = eval(input(""))
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 20:29:58) 
-- CODE:
from math import*

x = eval(input("Angulo: "))
k = int(input("Numero de termos: "))

i = 0
soma = 0 

while (i<k):
	conta = x**((2*i)+1) / factorial(2*i+1)
	x = -1 * x
	soma = soma + conta
	i = i + 1 
print(round(soma, 10))
-- EXECUTION TIME:
0.175982
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
